fixtures/errors/lex-bad-char/input.fz
fn main() do
  dbg(`hello)
end
